src/shared/base/body.css
/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  font-family: var(--hw-font-primary-medium);
  font-size: var(--hw-font-size-p);
  fill: var(--hw-color-gray);
  color: var(--hw-color-gray-darker);
  background: var(--hw-color-gray-lightest);
  display: flex;
  flex-direction: column;
  min-height: 100vh;

  /* For sticky footer */
  & main {
    flex: 1;
  }
}

body,
.smooth-container {
  scroll-behavior: smooth;
}

img,
svg {
  max-width: 100%;
  max-height: 100%;
}

input::-webkit-contacts-auto-fill-button {
  visibility: hidden;
  display: none !important;
  pointer-events: none;
  position: absolute;
  right: 0;
}

